# Python-Knowledge

./: .gitignore  README.md
Clase-persona-casillero-python/: Persona.py  README.md
Email_Module/: .gitignore  README.md  requirements.txt  setup.py
Email_Module/email_module/: emailSender.py
OPP-Python/work/src/: compound.py  compundFP.py  compundPipe.py  newton_raphson.py  pruebas.py  todo.py
Pandas_walkthrough/: Pandas Walkthrough.ipynb  Practice.ipynb  Series Walkthrough.ipynb  Week 6.ipynb  readme.md  transactions.xls
Pandas_walkthrough/data/: Finanzas.xlsx  Hidrolisis.xlsx  SVBTESD.xlsx  schedule.xlsx  transactions.xls
StockPortfolio/: calculator.html  requirements.txt
StockPortfolio/management/: admin.py  alphaLogic.py  models.py  urls.py  views.py
StockPortfolio/portfolio/: settings.py  urls.py
basics/: bucles.py  classes.py  collectons.py  decorators.py  files.py  functions.py  laptops.json  operators.py  planets.py  projects.md  readability.py  report.txt  test_py.py  variables.py
basics/api/: app.yaml  main.py
fast_api/: .gitignore  .pre-commit-config.yaml  Makefile  entrypoint.sh  main.py  pyproject.toml  readme.md
flask_spike/: main.py  run_server_instructions
platzi-django-course/platzigram/platzigram/: settings.py  urls.py
platzi-django-course/platzigram/posts/: models.py  urls.py  views.py
platzi-django-course/platzigram/templates/: nav.html
platzi-django-course/platzigram/users/: admin.py  forms.py  models.py  urls.py  views.py
platzi_ventas/: decorators.py  main.py  pv.py  setup.py
platzi_ventas/clients/: commands.py
(+15 files in other folders)
